--- a/SubEthaEdit-Mac/SEEPlainTextParticipantView.xib
+++ b/SubEthaEdit-Mac/SEEPlainTextParticipantView.xib
@@ -6,12 +6,12 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEPlainTextParticipantViewController">
             <connections>
-                <outlet property="actionOverlay" destination="lTM-E1-CsT" id="sot-w9-t3h"/>
                 <outlet property="actionOverlayOutlet" destination="lTM-E1-CsT" id="ilx-px-act"/>
                 <outlet property="connectinProgressIndicatorOutlet" destination="k1p-6D-syT" id="zYk-iV-Hba"/>
-                <outlet property="nameLabelOutlet" destination="laB-2b-86S" id="qIX-Pl-Y3A"/>
-                <outlet property="participantView" destination="1" id="8LZ-43-7qg"/>
-                <outlet property="view" destination="1" id="YD6-JR-eJm"/>
+                <outlet property="nameLabelOutlet" destination="laB-2b-86S" id="XZX-Mn-N4c"/>
+                <outlet property="participantViewOutlet" destination="1" id="xn7-5f-3EV"/>
+                <outlet property="userViewButtonOutlet" destination="hE6-nB-RDu" id="dMU-J4-gUA"/>
+                <outlet property="view" destination="1" id="bcw-1Z-TB2"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -80,13 +80,13 @@
                     <animations>
                         <caTransition key="subviews">
                             <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGJSZYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKkHCBES
-ExkKGiBVJG51bGzUCQoLDA0ODxBWJGNsYXNzVHR5cGVXc3VidHlwZV8QEl9fQ0FDb2RpbmdDb250ZW50
-c4AIgAOAAoAEWWZyb21SaWdodFZtb3ZlSW7SFAkVGFpOUy5vYmplY3RzohYXgAWABoAHV3N1YnR5cGXS
-GxwdHlokY2xhc3NuYW1lWCRjbGFzc2VzV05TQXJyYXmiHR9YTlNPYmplY3TSGxwhIlxDQVRyYW5zaXRp
-b26jIyQfXENBVHJhbnNpdGlvbltDQUFuaW1hdGlvbl8QD05TS2V5ZWRBcmNoaXZlctEnKFRyb290gAEA
-CAARABoAIwAtADIANwBBAEcAUABXAFwAZAB5AHsAfQB/AIEAiwCSAJcAogClAKcAqQCrALMAuADDAMwA
-1ADXAOAA5QDyAPYBAwEPASEBJAEpAAAAAAAAAgEAAAAAAAAAKQAAAAAAAAAAAAAAAAAAASs
+YnBsaXN0MDDUAQIDBAUGICFYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKcHCA8Q
+CRUbVSRudWxs0wkKCwwNDlR0eXBlViRjbGFzc18QEl9fQ0FDb2RpbmdDb250ZW50c4ACgAaAA1RmYWRl
+0hEKEhRaTlMub2JqZWN0c6ETgASABdIWFxgZWiRjbGFzc25hbWVYJGNsYXNzZXNXTlNBcnJheaIYGlhO
+U09iamVjdNIWFxwdXENBVHJhbnNpdGlvbqMeHxpcQ0FUcmFuc2l0aW9uW0NBQW5pbWF0aW9uXxAPTlNL
+ZXllZEFyY2hpdmVy0SIjVHJvb3SAAQAIABEAGgAjAC0AMgA3AD8ARQBMAFEAWABtAG8AcQBzAHgAfQCI
+AIoAjACOAJMAngCnAK8AsgC7AMAAzQDRAN4A6gD8AP8BBAAAAAAAAAIBAAAAAAAAACQAAAAAAAAAAAAA
+AAAAAAEGA
 </mutableData>
                         </caTransition>
                     </animations>
