--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C39" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C44" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -20,6 +20,7 @@
                 <outlet property="O_waitPipeStatusImageView" destination="68" id="69"/>
                 <outlet property="O_windowWidthTextField" destination="15" id="21"/>
                 <outlet property="O_writtenByTextField" destination="25" id="31"/>
+                <outlet property="shareInviteUsersButtonOutlet" destination="SB3-zK-zNn" id="7K3-em-bX7"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -51,15 +52,15 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <customView autoresizesSubviews="NO" toolTip="Tabulator-Einstellung" id="84" customClass="PopUpButton">
-                            <rect key="frame" x="87" y="0.0" width="106" height="17"/>
+                            <rect key="frame" x="87" y="0.0" width="76" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView autoresizesSubviews="NO" toolTip="Zeilenenden" id="81" customClass="PopUpButton">
-                            <rect key="frame" x="188" y="0.0" width="49" height="17"/>
+                            <rect key="frame" x="158" y="0.0" width="49" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView autoresizesSubviews="NO" toolTip="Datei-Codierung" id="77" customClass="PopUpButton">
-                            <rect key="frame" x="234" y="0.0" width="121" height="17"/>
+                            <rect key="frame" x="204" y="0.0" width="68" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView autoresizesSubviews="NO" toolTip="Dokument-Modus" id="75" customClass="PopUpButton">
@@ -73,6 +74,40 @@
                             <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" metaFont="system"/>
                         </box>
+                        <button id="vfj-iQ-rwb">
+                            <rect key="frame" x="277" y="0.0" width="21" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAnnounce_Inactive" imagePosition="only" alignment="center" alternateImage="BottomBarSharingIconAnnounce" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="EuY-O1-ng9">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="miniSystem"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="toggleIsAnnounced:" target="-1" id="dJy-9I-9EC"/>
+                                <outlet property="menu" destination="vSJ-Jc-3sH" id="o2Y-0X-qCr"/>
+                            </connections>
+                        </button>
+                        <button id="cAx-05-r3z">
+                            <rect key="frame" x="302" y="0.0" width="27" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconGroup" imagePosition="only" alignment="center" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="5vb-nB-sgY">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="miniSystem"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="toggleParticipantsDrawer:" target="-1" id="0L0-x0-8XB"/>
+                            </connections>
+                        </button>
+                        <button id="SB3-zK-zNn">
+                            <rect key="frame" x="328" y="0.0" width="26" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAdd" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="fEi-Tl-UsW">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="inviteUsersToDocumentViaSharingService:" target="-1" id="bxt-K3-1HA"/>
+                            </connections>
+                        </button>
                         <textField toolTip="Fensterbreite und Tabulator-Einstellung" verticalHuggingPriority="750" id="15" customClass="BorderedTextField">
                             <rect key="frame" x="352" y="0.0" width="40" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
@@ -140,8 +175,34 @@
                 </customView>
             </subviews>
         </customView>
+        <menu id="vSJ-Jc-3sH" userLabel="Announce Context Menu">
+            <items>
+                <menuItem title="Lesen &amp; Schreiben" tag="2" id="H7X-FD-SmG">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="changePendingUsersAccess:" target="-1" id="6fi-eI-ebx"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Nur Lesen" tag="1" id="EXN-s9-Ktc">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="changePendingUsersAccess:" target="-1" id="sRd-sn-Suc"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Geschützt" id="kT5-HM-c5H">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="changePendingUsersAccess:" target="-1" id="chH-EU-GwP"/>
+                    </connections>
+                </menuItem>
+            </items>
+        </menu>
     </objects>
     <resources>
+        <image name="BottomBarSharingIconAdd" width="19" height="11"/>
+        <image name="BottomBarSharingIconAnnounce" width="15" height="11"/>
+        <image name="BottomBarSharingIconAnnounce_Inactive" width="15" height="11"/>
+        <image name="BottomBarSharingIconGroup" width="16" height="11"/>
         <image name="SplitClose" width="15" height="15"/>
         <image name="SplitOpen" width="15" height="15"/>
         <image name="WaitPipe" width="13" height="12"/>
