--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -47,7 +47,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </customView>
-                <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View" customClass="RMBlurredView">
+                <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View">
                     <rect key="frame" x="0.0" y="0.0" width="409" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -121,8 +121,30 @@
                             </connections>
                         </textField>
                     </subviews>
+                    <backgroundFilters>
+                        <ciFilter name="CIGaussianBlur">
+                            <configuration>
+                                <null key="inputImage"/>
+                                <real key="inputRadius" value="2"/>
+                            </configuration>
+                        </ciFilter>
+                        <ciFilter name="CIColorControls">
+                            <configuration>
+                                <real key="inputBrightness" value="0.0"/>
+                                <real key="inputContrast" value="1"/>
+                                <null key="inputImage"/>
+                                <real key="inputSaturation" value="2"/>
+                            </configuration>
+                        </ciFilter>
+                        <ciFilter name="CIExposureAdjust">
+                            <configuration>
+                                <real key="inputEV" value="-1.5"/>
+                                <null key="inputImage"/>
+                            </configuration>
+                        </ciFilter>
+                    </backgroundFilters>
                 </customView>
-                <customView autoresizesSubviews="NO" id="27" userLabel="Top Blurred View" customClass="RMBlurredView">
+                <customView autoresizesSubviews="NO" id="27" userLabel="Top Blurred View">
                     <rect key="frame" x="0.0" y="273" width="409" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
@@ -172,6 +194,28 @@
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="WaitPipe" id="92"/>
                         </imageView>
                     </subviews>
+                    <backgroundFilters>
+                        <ciFilter name="CIGaussianBlur">
+                            <configuration>
+                                <null key="inputImage"/>
+                                <real key="inputRadius" value="10"/>
+                            </configuration>
+                        </ciFilter>
+                        <ciFilter name="CIColorControls">
+                            <configuration>
+                                <real key="inputBrightness" value="0.0"/>
+                                <real key="inputContrast" value="1"/>
+                                <null key="inputImage"/>
+                                <real key="inputSaturation" value="2"/>
+                            </configuration>
+                        </ciFilter>
+                        <ciFilter name="CIExposureAdjust">
+                            <configuration>
+                                <real key="inputEV" value="-1.5"/>
+                                <null key="inputImage"/>
+                            </configuration>
+                        </ciFilter>
+                    </backgroundFilters>
                 </customView>
             </subviews>
         </customView>
