--- a/SubEthaEdit-Mac/SEEParticipantView.xib
+++ b/SubEthaEdit-Mac/SEEParticipantView.xib
@@ -83,19 +83,7 @@
                     <constraints>
                         <constraint firstAttribute="width" constant="16" id="eWI-Cf-ece"/>
                     </constraints>
-                    <animations>
-                        <caTransition key="subviews">
-                            <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGICFYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKcHCA8Q
-CRUbVSRudWxs0wkKCwwNDlR0eXBlViRjbGFzc18QEl9fQ0FDb2RpbmdDb250ZW50c4ACgAaAA1RmYWRl
-0hEKEhRaTlMub2JqZWN0c6ETgASABdIWFxgZWiRjbGFzc25hbWVYJGNsYXNzZXNXTlNBcnJheaIYGlhO
-U09iamVjdNIWFxwdXENBVHJhbnNpdGlvbqMeHxpcQ0FUcmFuc2l0aW9uW0NBQW5pbWF0aW9uXxAPTlNL
-ZXllZEFyY2hpdmVy0SIjVHJvb3SAAQAIABEAGgAjAC0AMgA3AD8ARQBMAFEAWABtAG8AcQBzAHgAfQCI
-AIoAjACOAJMAngCnAK8AsgC7AMAAzQDRAN4A6gD8AP8BBAAAAAAAAAIBAAAAAAAAACQAAAAAAAAAAAAA
-AAAAAAEGA
-</mutableData>
-                        </caTransition>
-                    </animations>
+                    <animations/>
                 </customView>
             </subviews>
             <constraints>
@@ -111,6 +99,19 @@ AAAAAAEGA
                 <constraint firstItem="laB-2b-86S" firstAttribute="top" secondItem="hE6-nB-RDu" secondAttribute="bottom" constant="7" id="vgD-Fe-TTq"/>
                 <constraint firstAttribute="trailing" secondItem="lTM-E1-CsT" secondAttribute="trailing" id="xH1-ht-fZN"/>
             </constraints>
+            <animations>
+                <caTransition key="subviews">
+                    <mutableData key="keyedArchiveRepresentation">
+YnBsaXN0MDDUAQIDBAUGJSZYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKkHCBES
+ExkKGiBVJG51bGzUCQoLDA0ODxBWJGNsYXNzVHR5cGVXc3VidHlwZV8QEl9fQ0FDb2RpbmdDb250ZW50
+c4AIgAOAAoAEWWZyb21SaWdodFZtb3ZlSW7SFAkVGFpOUy5vYmplY3RzohYXgAWABoAHV3N1YnR5cGXS
+GxwdHlokY2xhc3NuYW1lWCRjbGFzc2VzV05TQXJyYXmiHR9YTlNPYmplY3TSGxwhIlxDQVRyYW5zaXRp
+b26jIyQfXENBVHJhbnNpdGlvbltDQUFuaW1hdGlvbl8QD05TS2V5ZWRBcmNoaXZlctEnKFRyb290gAEA
+CAARABoAIwAtADIANwBBAEcAUABXAFwAZAB5AHsAfQB/AIEAiwCSAJcAogClAKcAqQCrALMAuADDAMwA
+1ADXAOAA5QDyAPYBAwEPASEBJAEpAAAAAAAAAgEAAAAAAAAAKQAAAAAAAAAAAAAAAAAAASs
+</mutableData>
+                </caTransition>
+            </animations>
         </customView>
     </objects>
     <resources>
