--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -98,18 +98,18 @@
                         </imageView>
                     </subviews>
                     <backgroundFilters>
-                        <ciFilter name="CIGaussianBlur">
-                            <configuration>
-                                <null key="inputImage"/>
-                                <real key="inputRadius" value="10"/>
-                            </configuration>
-                        </ciFilter>
                         <ciFilter name="CIColorControls">
                             <configuration>
                                 <real key="inputBrightness" value="0.0"/>
                                 <real key="inputContrast" value="1"/>
                                 <null key="inputImage"/>
-                                <real key="inputSaturation" value="4"/>
+                                <real key="inputSaturation" value="15"/>
+                            </configuration>
+                        </ciFilter>
+                        <ciFilter name="CIGaussianBlur">
+                            <configuration>
+                                <null key="inputImage"/>
+                                <real key="inputRadius" value="5"/>
                             </configuration>
                         </ciFilter>
                     </backgroundFilters>
@@ -189,18 +189,18 @@
                         </textField>
                     </subviews>
                     <backgroundFilters>
-                        <ciFilter name="CIGaussianBlur">
-                            <configuration>
-                                <null key="inputImage"/>
-                                <real key="inputRadius" value="2"/>
-                            </configuration>
-                        </ciFilter>
                         <ciFilter name="CIColorControls">
                             <configuration>
                                 <real key="inputBrightness" value="0.0"/>
                                 <real key="inputContrast" value="1"/>
                                 <null key="inputImage"/>
-                                <real key="inputSaturation" value="4"/>
+                                <real key="inputSaturation" value="15"/>
+                            </configuration>
+                        </ciFilter>
+                        <ciFilter name="CIGaussianBlur">
+                            <configuration>
+                                <null key="inputImage"/>
+                                <real key="inputRadius" value="5"/>
                             </configuration>
                         </ciFilter>
                     </backgroundFilters>
