--- a/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
+++ b/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5051" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment version="1070" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEParticipantsOverlayViewController">
@@ -19,7 +19,7 @@
                 <ciFilter name="CIGaussianBlur">
                     <configuration>
                         <null key="inputImage"/>
-                        <real key="inputRadius" value="2"/>
+                        <real key="inputRadius" value="4"/>
                     </configuration>
                 </ciFilter>
                 <ciFilter name="CIColorControls">
@@ -27,7 +27,7 @@
                         <real key="inputBrightness" value="0.0"/>
                         <real key="inputContrast" value="1"/>
                         <null key="inputImage"/>
-                        <real key="inputSaturation" value="2"/>
+                        <real key="inputSaturation" value="10"/>
                     </configuration>
                 </ciFilter>
             </backgroundFilters>
